tests/ui/iterators/unsized-peekable.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/unsized-peekable.rs:4:28
   |
LL |     let mut peeker = items.peekable();
   |                            ^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
note: required by a bound in `peekable`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
